[package]
name = "kick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "ttf"]

[dependencies]
arrayvec = "0.7.2"
rand = "0.8.5"
rodio = "0.16.0"
